--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -373,11 +373,12 @@
                       <div class="swiper-slide">
                         <div class="project-block" data-color="#FDFBE6">
                           <div class="project-image rounded overflow-hidden">
-                            <img
-                              class="w-100 rounded"
-                              src="assets/images/projects/BantabaLandingPage.svg"
-                              alt="Cover"
-                            />
+                            <a href="bantaba-landingPage.html">
+                              <img
+                                class="w-100 rounded"
+                                src="assets/images/projects/BantabaLandingPage.svg"
+                                alt="Cover"
+                            /></a>
                           </div>
                           <a
                             class="project-content d-flex align-items-center justify-content-between mt-4 text-reset"
@@ -443,7 +444,7 @@
                             <div>
                               <h3 class="mb-1">Bantaba's Platform</h3>
                               <p class="mb-0">
-                                "How do we improve the UX of the platform?"
+                                Improving the UX of the platform
                               </p>
                             </div>
                             <div class="icon ms-4">
@@ -487,19 +488,22 @@
                       <div class="swiper-slide">
                         <div class="project-block" data-color="#9DD1EF">
                           <div class="project-image rounded overflow-hidden">
-                            <img
-                              class="w-100 rounded"
-                              src="assets/images/projects/SL.svg"
-                              alt=""
-                            />
+                            <a href="SL.html">
+                              <img
+                                class="w-100 rounded"
+                                src="assets/images/projects/SL.svg"
+                                alt=""
+                            /></a>
                           </div>
                           <a
                             class="project-content d-flex align-items-center justify-content-between mt-4 text-reset"
-                            href="#"
+                            href="SL.html"
                           >
                             <div>
                               <h3 class="mb-1">SL</h3>
-                              <p class="mb-0">Text</p>
+                              <p class="mb-0">
+                                Redesigning & Adding new functions
+                              </p>
                             </div>
                             <div class="icon ms-4">
                               <svg
@@ -539,7 +543,7 @@
                           </a>
                         </div>
                       </div>
-                      <div class="swiper-slide">
+                      <!-- <div class="swiper-slide">
                         <div class="project-block" data-color="#00918D">
                           <div class="project-image rounded overflow-hidden">
                             <img
@@ -593,7 +597,7 @@
                             </div>
                           </a>
                         </div>
-                      </div>
+                      </div> -->
                       <!-- <div class="swiper-slide">
                         <div class="project-block" data-color="#f8d3d4">
                           <div class="project-image rounded overflow-hidden">
