--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -212,7 +212,7 @@
                           <img
                             class="w-100 rounded"
                             src="assets/images/projects/BantabaLandingPage.svg"
-                            alt="#"
+                            alt="Mockups of the landing page"
                           />
                         </div>
                         <div
@@ -326,13 +326,13 @@
                       <a
                         class="project-block d-block text-reset"
                         data-color="#9DD1EF"
-                        href="#"
+                        href="SL.html"
                       >
                         <div class="project-image rounded overflow-hidden">
                           <img
                             class="w-100 rounded"
                             src="assets/images/projects/SL.svg"
-                            alt=""
+                            alt="Mockups of the new functions"
                           />
                         </div>
                         <div
@@ -340,7 +340,10 @@
                         >
                           <div>
                             <h3 class="mb-1">SL</h3>
-                            <p class="mb-0">Text</p>
+                            <p class="mb-0">
+                              Redesigning & Adding new functions to encourage
+                              more to use public transportation
+                            </p>
                           </div>
                           <div class="icon ms-4">
                             <svg
