--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -431,11 +431,12 @@
                       <div class="swiper-slide">
                         <div class="project-block" data-color="#B1E0C2">
                           <div class="project-image rounded overflow-hidden">
-                            <img
-                              class="w-100 rounded"
-                              src="assets/images/projects/Bantaba.png"
-                              alt=""
-                            />
+                            <a href="bantaba-platform.html">
+                              <img
+                                class="w-100 rounded"
+                                src="assets/images/projects/Bantaba.png"
+                                alt="Platform Mockups"
+                            /></a>
                           </div>
                           <a
                             class="project-content d-flex align-items-center justify-content-between mt-4 text-reset"
