--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -282,167 +282,177 @@
                     />
                   </div>
                 </div>
-                <div class="col-lg-6 mt-0 mt-lg-5">
-                  <!-- start of experience -->
-                  <div class="section pt-lg-0">
-                    <div class="section-title mb-2">
-                      <h2 class="title h3">Experience</h2>
-                    </div>
-
-                    <div class="row g-4">
-                      <div class="col-sm-6">
-                        <small>Oct 2021 - Present </small>
-                        <h3 class="h5 my-1 font-tertiary">UX & UI Designer</h3>
-                        <p class="text-muted">Bantaba</p>
+                <div class="content">
+                  <div class="col-lg-6 mt-0 mt-lg-5">
+                    <!-- start of experience -->
+                    <div class="section pt-lg-0">
+                      <div class="section-title mb-5">
+                        <h2 class="title h3">Experience</h2>
                       </div>
-                      <!-- <div class="col-sm-6">
+
+                      <div class="row g-4">
+                        <div class="col-sm-6">
+                          <small>Oct 2021 - Present </small>
+                          <h3 class="h5 my-1 font-tertiary">
+                            UX & UI Designer
+                          </h3>
+                          <p class="text-muted">Bantaba</p>
+                          <ul>
+                            <li>
+                              Created a design system from scratch which was
+                              used to
+                            </li>
+                          </ul>
+                        </div>
+                        <!-- <div class="col-sm-6">
                     <small>Feb 2019 - Oct 2020
                     </small>
                     <h3 class="h5 my-1 font-tertiary">Guest Service</h3>
                     <p class="text-muted">Casino Cosmopol</p>
                   </div> -->
-                      <div class="col-sm-6">
-                        <small>2016</small>
-                        <h3 class="h5 my-1 font-tertiary">Marketing</h3>
-                        <p class="text-muted">NärCon</p>
-                      </div>
-                      <!-- <div class="col-sm-6">
+                        <div class="col-sm-6">
+                          <small>2016</small>
+                          <h3 class="h5 my-1 font-tertiary">Marketing</h3>
+                          <p class="text-muted">NärCon</p>
+                        </div>
+                        <!-- <div class="col-sm-6">
                     <small>June 2017 — Oct 2017</small>
                     <h3 class="h5 my-1 font-tertiary">Front-end Internship</h3>
                     <p class="text-muted">CRM Studio, UK</p>
                   </div> -->
-                    </div>
-                  </div>
-                  <!-- end of exp -->
-
-                  <!-- start of education -->
-                  <div class="section pt-lg-0">
-                    <div class="section-title mb-2">
-                      <h2 class="title h3">Education</h2>
-                    </div>
-
-                    <div class="row g-4">
-                      <div class="col-sm-6">
-                        <small>Autumn 2019 - Spring 2022 </small>
-                        <h3 class="h5 my-1 font-tertiary">
-                          UX design and Requirements Analytics
-                        </h3>
-                        <p class="text-muted">Chas Academy</p>
                       </div>
-                      <div class="col-sm-6">
-                        <small>2015 - 2018 </small>
-                        <h3 class="h5 my-1 font-tertiary">Aesthetic Media</h3>
-                        <p class="text-muted">
-                          International IT College of Sweden
-                        </p>
+                    </div>
+                    <!-- end of exp -->
+
+                    <!-- start of education -->
+                    <div class="section pt-lg-0">
+                      <div class="section-title mb-2">
+                        <h2 class="title h3">Education</h2>
                       </div>
-                      <!-- <div class="col-sm-6">
+
+                      <div class="row g-4">
+                        <div class="col-sm-6">
+                          <small>Autumn 2019 - Spring 2022 </small>
+                          <h3 class="h5 my-1 font-tertiary">
+                            UX design and Requirements Analytics
+                          </h3>
+                          <p class="text-muted">Chas Academy</p>
+                        </div>
+                        <div class="col-sm-6">
+                          <small>2015 - 2018 </small>
+                          <h3 class="h5 my-1 font-tertiary">Aesthetic Media</h3>
+                          <p class="text-muted">
+                            International IT College of Sweden
+                          </p>
+                        </div>
+                        <!-- <div class="col-sm-6">
                     <small>2015</small>
                     <h3 class="h5 my-1 font-tertiary">UI/UX Design</h3>
                     <p class="text-muted">QTURO University</p>
                   </div> -->
-                    </div>
-                  </div>
-                  <!-- end of edu -->
-
-                  <!-- start of certificates -->
-                  <div>
-                    <div class="section-title mb-2">
-                      <h2 class="title h3">Certificates</h2>
-                    </div>
-
-                    <div class="row g-4">
-                      <div class="col-sm-6">
-                        <small>2018 </small>
-                        <h3 class="h5 my-1 font-tertiary">
-                          Cambridge English Advanced
-                        </h3>
-                        <p class="text-muted">University of Cambridge</p>
-                      </div>
-                      <div class="col-sm-6">
-                        <small>2017 </small>
-                        <h3 class="h5 my-1 font-tertiary">
-                          IT award: Best at IT
-                        </h3>
-                        <p class="text-muted">
-                          International IT College of Sweden
-                        </p>
                       </div>
                     </div>
-                  </div>
-                  <!-- end of certificates -->
+                    <!-- end of edu -->
 
-                  <!-- start of competences & tools -->
-                  <div class="row">
-                    <div class="col-sm-6">
-                      <div class="section pb-0">
-                        <div class="section-title mb-2">
-                          <h2 class="title h3">Competences</h2>
+                    <!-- start of certificates -->
+                    <div>
+                      <div class="section-title mb-2">
+                        <h2 class="title h3">Certificates</h2>
+                      </div>
+
+                      <div class="row g-4">
+                        <div class="col-sm-6">
+                          <small>2018 </small>
+                          <h3 class="h5 my-1 font-tertiary">
+                            Cambridge English Advanced
+                          </h3>
+                          <p class="text-muted">University of Cambridge</p>
                         </div>
+                        <div class="col-sm-6">
+                          <small>2017 </small>
+                          <h3 class="h5 my-1 font-tertiary">
+                            IT award: Best at IT
+                          </h3>
+                          <p class="text-muted">
+                            International IT College of Sweden
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- end of certificates -->
 
-                        <div class="row g-3">
-                          <div class="col-12">
-                            <p class="h5 font-tertiary">UX & UI Design:</p>
-                            <ul>
-                              <li>Research</li>
-                              <li>Wireframes</li>
-                              <li>Design Processes</li>
-                              <li>Interaction Design</li>
-                              <li>User Testing</li>
-                            </ul>
+                    <!-- start of competences & tools -->
+                    <div class="row">
+                      <div class="col-sm-6">
+                        <div class="section pb-0">
+                          <div class="section-title mb-2">
+                            <h2 class="title h3">Competences</h2>
                           </div>
 
-                          <div class="col-12">
-                            <p class="h5 font-tertiary">Agile Work methods</p>
-                          </div>
+                          <div class="row g-3">
+                            <div class="col-12">
+                              <p class="h5 font-tertiary">UX & UI Design:</p>
+                              <ul>
+                                <li>Research</li>
+                                <li>Wireframes</li>
+                                <li>Design Processes</li>
+                                <li>Interaction Design</li>
+                                <li>User Testing</li>
+                              </ul>
+                            </div>
 
-                          <div class="col-12">
-                            <p class="h5 font-tertiary">Front end:</p>
-                            <ul>
-                              <li>HTML</li>
-                              <li>CSS</li>
-                              <li>Basic JavaScript</li>
-                            </ul>
-                          </div>
+                            <div class="col-12">
+                              <p class="h5 font-tertiary">Agile Work methods</p>
+                            </div>
 
-                          <!-- <div class="col-12">
+                            <div class="col-12">
+                              <p class="h5 font-tertiary">Front end:</p>
+                              <ul>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>Basic JavaScript</li>
+                              </ul>
+                            </div>
+
+                            <!-- <div class="col-12">
                         <p class="h5 font-tertiary">Interaction Design</p>
                       </div> -->
-                        </div>
-                      </div>
-                    </div>
-
-                    <div class="col-sm-6">
-                      <div class="section pb-0">
-                        <div class="section-title mb-5">
-                          <h2 class="title h3">Tools</h2>
-                        </div>
-
-                        <div class="row g-3">
-                          <div class="col-12">
-                            <p class="h5 font-tertiary">Figma</p>
-                          </div>
-
-                          <div class="col-12">
-                            <p class="h5 font-tertiary">Adobe XD</p>
-                          </div>
-
-                          <div class="col-12">
-                            <p class="h5 font-tertiary">Photoshop</p>
-                          </div>
-
-                          <div class="col-12">
-                            <p class="h5 font-tertiary">Canva</p>
-                          </div>
-
-                          <div class="col-12">
-                            <p class="h5 font-tertiary">Notion</p>
                           </div>
                         </div>
                       </div>
+
+                      <div class="col-sm-6">
+                        <div class="section pb-0">
+                          <div class="section-title mb-5">
+                            <h2 class="title h3">Tools</h2>
+                          </div>
+
+                          <div class="row g-3">
+                            <div class="col-12">
+                              <p class="h5 font-tertiary">Figma</p>
+                            </div>
+
+                            <div class="col-12">
+                              <p class="h5 font-tertiary">Adobe XD</p>
+                            </div>
+
+                            <div class="col-12">
+                              <p class="h5 font-tertiary">Photoshop</p>
+                            </div>
+
+                            <div class="col-12">
+                              <p class="h5 font-tertiary">Canva</p>
+                            </div>
+
+                            <div class="col-12">
+                              <p class="h5 font-tertiary">Notion</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </div>
+                    <!-- end of competences & tools -->
                   </div>
-                  <!-- end of competences & tools -->
                 </div>
               </div>
             </div>
