--- a/portfolio/bantaba-platform.html
+++ b/portfolio/bantaba-platform.html
@@ -271,6 +271,7 @@
                       map during the course of the projects, adding in more
                       needs, and secondary stakeholders.
                     </p>
+                    <p>I went for an Impact Map as it'd be a constant reminder for me what the stakeholders' needs are.</p>
 
                     <h5><strong>PERSONAS</strong></h5>
                     <p>
@@ -284,9 +285,10 @@
                       made a startup. This way, I could put myself in the
                       individual’s shoes, as well as the rest of the startup.
                     </p>
-                    <img src="assets/images/projects/platformPersona1.png" />
-                    <img src="assets/images/projects/platformPersona2.png" />
-                    <img src="assets/images/projects/platformPersona3.png" />
+                    <img class="w-100 rounded"
+                    loading="lazy" src="assets/images/projects/platformPersona1.png" alt="Gambian 32 year old CEO of a fintech app called Repayout." />
+                    <img class="w-100 rounded"
+                    loading="lazy" src="assets/images/projects/platformPersona3.png" alt="South African 43 year old Marketing Lead of an agtech startup called FreshSprout." />
 
                     <div class="flexrow">
                       <div class="col-lg-6" style="padding: 20px">
