--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -266,8 +266,8 @@
                       <a
                         class="project-block d-block text-reset"
                         data-color="#B1E0C2"
-                        href="#"
-                      >
+                        href="bantaba-platform.html"
+                        >
                         <div class="project-image rounded overflow-hidden">
                           <img
                             class="w-100 rounded"
