--- a/portfolio/bantaba-platform.html
+++ b/portfolio/bantaba-platform.html
@@ -286,9 +286,12 @@
                       individual’s shoes, as well as the rest of the startup.
                     </p>
                     <img class="w-100 rounded"
-                    loading="lazy" src="assets/images/projects/platformPersona1.png" alt="Gambian 32 year old CEO of a fintech app called Repayout." />
-                    <img class="w-100 rounded"
                     loading="lazy" src="assets/images/projects/platformPersona3.png" alt="South African 43 year old Marketing Lead of an agtech startup called FreshSprout." />
+                    <p>One of the personas I made. I based each individual and startup on Bantaba's users to make sure they'd  be relevant.</p>
+                    <p>The reason I made personas is simply because I am not in our target group, and I thought personas could help with that. For instance, if I'm unsure about a feature, I could ask myself, "What's the value for Cheryl if we do [...]?". It ended up making things easier for  me in the project as it helped make things less abstract. </p>
+
+                    <h5><strong>WCAG & UX REVIEW</strong></h5>
+                    
 
                     <div class="flexrow">
                       <div class="col-lg-6" style="padding: 20px">
