--- a/portfolio/bantaba-landingPage.html
+++ b/portfolio/bantaba-landingPage.html
@@ -262,6 +262,8 @@
                                     <img src="assets/images/projects/LandingPageAnimation.gif" loading="lazy" alt="Animation showing networking, knowledge sharing, and investors">
                                     <p>moreeee</p>
                                     <br/>
+                                    <img src="assets/images/projects/LandingPageAfricanMap.svg" loading="lazy" alt="A map of Africa, with pins in different locations">
+
 
                                             <img class="w-100 rounded mb-8 mx-auto d-block" loading="lazy" src="assets/images/projects/LandingPageDefault.svg">                                         
 
