--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -207,10 +207,10 @@
                         <h2 class="title h3">Find me on</h2>
                       </div>
 
-                      <p class="mb-2">
+                      <!-- <p class="mb-2">
                         <a class="btn-link-alt" href="#!">Dribbble</a>
-                      </p>
-                      <p><a class="btn-link-alt" href="#!">Behance</a></p>
+                      </p> -->
+                      <!-- <p><a class="btn-link-alt" href="#!">Behance</a></p> -->
                       <p>
                         <a
                           class="btn-link-alt"
@@ -229,6 +229,32 @@
                           class="btn-link-alt"
                           href="mailto:kida@tarkanmaki.com"
                           >kida@tarkanmaki.com</a
+                        >
+                        <br /><br />
+                        <a class="btn-link" href="assets/Resume.pdf" download
+                          ><svg
+                            class="me-2"
+                            width="24"
+                            height="24"
+                            stroke-width="1.5"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                          >
+                            <path
+                              d="M6 20L18 20"
+                              stroke="currentColor"
+                              stroke-linecap="round"
+                              stroke-linejoin="round"
+                            />
+                            <path
+                              d="M12 4V16M12 16L15.5 12.5M12 16L8.5 12.5"
+                              stroke="currentColor"
+                              stroke-linecap="round"
+                              stroke-linejoin="round"
+                            />
+                          </svg>
+                          Download Resume</a
                         >
                       </p>
                       <!-- <p>
