--- a/portfolio/SL.html
+++ b/portfolio/SL.html
@@ -515,7 +515,7 @@
                   <a
                     class="project-block d-block text-reset"
                     data-color="#B1E0C2"
-                    href="#!"
+                    href="bantaba-platform.html"
                   >
                     <div class="project-image rounded overflow-hidden">
                       <img
@@ -574,22 +574,22 @@
                 <div class="col-md-5">
                   <a
                     class="project-block d-block text-reset"
-                    data-color="#9DD1EF"
-                    href="#!"
+                    data-color="#FDFBE6"
+                    href="bantaba-landingPage.html"
                   >
                     <div class="project-image rounded overflow-hidden">
                       <img
                         class="w-100 rounded"
-                        src="assets/images/projects/SL.svg"
-                        alt=""
+                        src="assets/images/projects/BantabaLandingPage.svg"
+                        alt="Mockups of the platform"
                       />
                     </div>
                     <div
                       class="project-content d-flex align-items-center justify-content-between mt-4"
                     >
                       <div>
-                        <h3 class="mb-1">SL</h3>
-                        <p class="mb-0">Text</p>
+                        <h3 class="mb-1">Bantaba's Landing Page</h3>
+                        <p class="mb-0">Giving Bantaba a new, fresh look.</p>
                       </div>
                       <div class="icon ms-4">
                         <svg
