--- a/portfolio/bantaba-landingPage.html
+++ b/portfolio/bantaba-landingPage.html
@@ -305,14 +305,14 @@
                         </div>
                         <div class="row g-5 justify-content-center project-page">
                             <div class="col-md-5">
-                                <a class="project-block d-block text-reset" data-color="#B1E0C2" href="#!">
+                                <a class="project-block d-block text-reset" data-color="#B1E0C2" href="bantaba-platform.html">
                                     <div class="project-image rounded overflow-hidden">
                                         <img class="w-100 rounded" src="assets/images/projects/Bantaba.png" alt="Mockups of the platform">
                                     </div>
                                     <div class="project-content d-flex align-items-center justify-content-between mt-4">
                                         <div>
                                             <h3 class="mb-1">Bantaba's Platform</h3>
-                                            <p class="mb-0">I tackled the difficult question of "How do we improve the UX of the platform?</p>
+                                            <p class="mb-0">Improving the UX of the platform</p>
                                         </div>
                                         <div class="icon ms-4">
                                             <svg width="26px" height="18px" viewBox="0 0 26 18" version="1.1"
@@ -337,37 +337,64 @@
                                 </a>
                             </div>
                             <div class="col-md-5">
-                                <a class="project-block d-block text-reset" data-color="#9DD1EF" href="#!">
-                                    <div class="project-image rounded overflow-hidden">
-                                        <img class="w-100 rounded" src="assets/images/projects/SL.svg" alt="">
+                                <a
+                                  class="project-block d-block text-reset"
+                                  data-color="#9DD1EF"
+                                  href="SL.html"
+                                >
+                                  <div class="project-image rounded overflow-hidden">
+                                    <img
+                                      class="w-100 rounded"
+                                      src="assets/images/projects/SL.svg"
+                                      alt=""
+                                    />
+                                  </div>
+                                  <div
+                                    class="project-content d-flex align-items-center justify-content-between mt-4"
+                                  >
+                                    <div>
+                                      <h3 class="mb-1">SL App</h3>
+                                      <p class="mb-0">Redesigning & Adding new functions </p>
                                     </div>
-                                    <div class="project-content d-flex align-items-center justify-content-between mt-4">
-                                        <div>
-                                            <h3 class="mb-1">SL</h3>
-                                            <p class="mb-0">Text</p>
-                                        </div>
-                                        <div class="icon ms-4">
-                                            <svg width="26px" height="18px" viewBox="0 0 26 18" version="1.1"
-                                                xmlns="http://www.w3.org/2000/svg"
-                                                xmlns:xlink="http://www.w3.org/1999/xlink">
-                                                <g id="Design" stroke="none" stroke-width="1" fill="none"
-                                                    fill-rule="evenodd">
-                                                    <g id="Werk-1" transform="translate(-220.000000, -2553.000000)"
-                                                        fill="#191A1E">
-                                                        <g id="Group-12" transform="translate(170.000000, 2211.000000)">
-                                                            <path
-                                                                d="M63.9305435,360.256408 L70.0630489,354.123902 L71.4695733,355.530427 L64.38624,362.61376 L62.9695733,364.030427 L54.5304267,355.59128 L55.9470934,354.174613 L61.9270743,360.154594 L61.9270743,338 L63.9305435,338 L63.9305435,360.256408 Z"
-                                                                id="Combined-Shape"
-                                                                transform="translate(63.000000, 351.000000) rotate(-90.000000) translate(-63.000000, -351.000000) ">
-                                                            </path>
-                                                        </g>
-                                                    </g>
-                                                </g>
-                                            </svg>
-                                        </div>
+                                    <div class="icon ms-4">
+                                      <svg
+                                        width="26px"
+                                        height="18px"
+                                        viewBox="0 0 26 18"
+                                        version="1.1"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        xmlns:xlink="http://www.w3.org/1999/xlink"
+                                      >
+                                        <g
+                                          id="Design"
+                                          stroke="none"
+                                          stroke-width="1"
+                                          fill="none"
+                                          fill-rule="evenodd"
+                                        >
+                                          <g
+                                            id="Werk-1"
+                                            transform="translate(-220.000000, -2553.000000)"
+                                            fill="#191A1E"
+                                          >
+                                            <g
+                                              id="Group-12"
+                                              transform="translate(170.000000, 2211.000000)"
+                                            >
+                                              <path
+                                                d="M63.9305435,360.256408 L70.0630489,354.123902 L71.4695733,355.530427 L64.38624,362.61376 L62.9695733,364.030427 L54.5304267,355.59128 L55.9470934,354.174613 L61.9270743,360.154594 L61.9270743,338 L63.9305435,338 L63.9305435,360.256408 Z"
+                                                id="Combined-Shape"
+                                                transform="translate(63.000000, 351.000000) rotate(-90.000000) translate(-63.000000, -351.000000) "
+                                              ></path>
+                                            </g>
+                                          </g>
+                                        </g>
+                                      </svg>
                                     </div>
+                                  </div>
                                 </a>
-                            </div>
+                              </div>
+                            
                         </div>
                     </div>
                 </section>
