--- a/portfolio/bantaba-platform.html
+++ b/portfolio/bantaba-platform.html
@@ -420,13 +420,13 @@
                 <div class="col-md-5">
                   <a
                     class="project-block d-block text-reset"
-                    data-color="#B1E0C2"
-                    href="#!"
+                    data-color="#FDFBE6"
+                    href="bantaba-landingPage.html"
                   >
                     <div class="project-image rounded overflow-hidden">
                       <img
                         class="w-100 rounded"
-                        src="assets/images/projects/Bantaba.png"
+                        src="assets/images/projects/BantabaLandingPage.svg"
                         alt="Mockups of the platform"
                       />
                     </div>
@@ -434,11 +434,8 @@
                       class="project-content d-flex align-items-center justify-content-between mt-4"
                     >
                       <div>
-                        <h3 class="mb-1">Bantaba's Platform</h3>
-                        <p class="mb-0">
-                          I tackled the difficult question of "How do we improve
-                          the UX of the platform?
-                        </p>
+                        <h3 class="mb-1">Bantaba's Landing Page</h3>
+                        <p class="mb-0">Giving Bantaba a new, fresh look.</p>
                       </div>
                       <div class="icon ms-4">
                         <svg
@@ -482,7 +479,7 @@
                   <a
                     class="project-block d-block text-reset"
                     data-color="#9DD1EF"
-                    href="#!"
+                    href="SL.html"
                   >
                     <div class="project-image rounded overflow-hidden">
                       <img
@@ -495,8 +492,8 @@
                       class="project-content d-flex align-items-center justify-content-between mt-4"
                     >
                       <div>
-                        <h3 class="mb-1">SL</h3>
-                        <p class="mb-0">Text</p>
+                        <h3 class="mb-1">SL App</h3>
+                        <p class="mb-0">Redesigning & Adding new functions</p>
                       </div>
                       <div class="icon ms-4">
                         <svg
