getting rid of thing

--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -279,16 +279,16 @@
           <!-- end of contact info -->
 
           <!-- start of contact form -->
-          <section class="section">
+          <!-- <section class="section">
             <div class="container">
               <div class="row justify-content-center">
                 <div class="col-lg-10">
                   <div class="section-title mb-6">
                     <h2 class="title">Let’s talk</h2>
-                  </div>
+                  </div> -->
 
-                  <!-- you can use https://formspree.io/ -->
-                  <form action="https://formspree.io/f/xnqwoogz" method="post">
+          <!-- you can use https://formspree.io/ -->
+          <!-- <form action="https://formspree.io/f/xnqwoogz" method="post">
                     <div class="row g-5">
                       <div class="col-12">
                         <label
@@ -337,9 +337,9 @@
                         </button>
                       </div>
                     </div>
-                  </form>
+                  </form> -->
 
-                  <!-- <div class="section pb-0">
+          <!-- <div class="section pb-0">
                     <div class="section-title mb-5">
                       <h2 class="title">What next?</h2>
                     </div>
@@ -353,10 +353,10 @@
                       and how I can help.
                     </p>
                   </div> -->
-                </div>
+          <!-- </div>
               </div>
             </div>
-          </section>
+          </section> -->
           <!-- end of contact form -->
 
           <!-- start of footer adjust block -->
